@@ -1,32 +1,26 @@
 package com.epic7.backend.service;
 
 import com.epic7.backend.dto.SkillDTO;
-import com.epic7.backend.model.Hero;
 import com.epic7.backend.model.PlayerHero;
 import com.epic7.backend.model.Skill;
-import com.epic7.backend.model.User;
-import com.epic7.backend.model.enums.SkillCategory;
-import com.epic7.backend.repository.HeroRepository;
 import com.epic7.backend.repository.PlayerHeroRepository;
 import com.epic7.backend.repository.SkillRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Service métier pour la gestion des compétences (skills) des héros.
- * Règles métier :
- * - Maximum 3 compétences par héros
- * - Une seule compétence passive, obligatoirement en 2e position
+ * Service métier pour la lecture des compétences (skills).
+ * Les compétences sont liées aux héros dans la base de données
+ * et exposées sous forme de DTO.
  */
 @Service
 @RequiredArgsConstructor
 public class SkillService {
 
     private final SkillRepository skillRepository;
-    private final HeroRepository heroRepository;
+
     private final PlayerHeroRepository playerHeroRepository;
 
     /**
@@ -42,90 +36,19 @@ public class SkillService {
     public List<SkillDTO> getSkillDTOsByHero(Long heroId) {
         return getSkillsByHeroId(heroId).stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * Ajoute une compétence à un héros.
-     * Vérifie les règles métier : Avec validationSkillAddition
-     * @param heroId    
-     * @param skill
-     * @return
+     * Récupère les compétences d’un héros joueur (PlayerHero).
      */
-    public Skill addSkillToHero(Long heroId, Skill skill) {
-        // Vérifie si le héros existe
-        Hero hero = heroRepository.findById(heroId)
-                .orElseThrow(() -> new RuntimeException("Héros introuvable"));
-
-        // Vérifie si la compétence existe déjà
-        List<Skill> existingSkills = skillRepository.findByHero(hero);
-
-        
-        validateSkillAddition(existingSkills, skill); // Vérification des règles métier
-
-
-        skill.setHero(hero); // Associe la compétence au héros
-        return skillRepository.save(skill); // Enregistre la compétence
-    }
-
-    /**
-     * Vérifie si l'ajout d'une compétence respecte les règles métier.
-     * - Maximum 3 compétences
-     * - Une seule compétence passive, obligatoirement en 2e position
-     * @param existingSkills
-     * @param skill
-     */
-    private void validateSkillAddition(List<Skill> existingSkills, Skill skill) {
-        if (existingSkills.size() >= 3) {
-            throw new IllegalStateException("Un héros ne peut pas avoir plus de 3 compétences.");
-        }
-
-        if (skill.getCategory() == SkillCategory.PASSIVE) {
-            boolean hasPassive = existingSkills.stream()
-                    .anyMatch(s -> s.getCategory() == SkillCategory.PASSIVE);
-            if (hasPassive) {
-                throw new IllegalArgumentException("Un héros ne peut avoir qu'une seule compétence passive.");
-            }
-            if (existingSkills.size() != 1) {
-                throw new IllegalArgumentException("La compétence passive doit être en 2e position.");
-            }
-        }
-    }
-
-    /**
-     * Supprime une compétence par son ID.
-     */
-    public void deleteSkill(Long skillId) {
-        skillRepository.deleteById(skillId);
-    }
-
-    /**
-     * Vérifie la position de la compétence passive.
-     * La compétence passive doit être en 2e position (index 1).
-     * @param heroId    
-     */
-    public void validatePassiveSkillPosition(Long heroId) {
-        List<Skill> skills = skillRepository.findByHeroId(heroId);
-        for (int i = 0; i < skills.size(); i++) {
-            Skill skill = skills.get(i);
-            if (skill.getCategory() == SkillCategory.PASSIVE && i != 1) {
-                throw new IllegalStateException("La compétence passive doit être en 2e position.");
-            }
-        }
-    }
-
-    /**
-     * Retourne les compétences liées à un PlayerHero, après vérification d'appartenance.
-     */
-    public List<Skill> getSkillsForPlayerHeroByPlayerHeroId(Long playerHeroId, User user) {
+    public List<SkillDTO> getSkillDTOsForPlayerHeroByPlayerHeroId(Long playerHeroId) {
         PlayerHero playerHero = playerHeroRepository.findById(playerHeroId)
-                .orElseThrow(() -> new RuntimeException("Héros introuvable"));
-
-        if (!playerHero.getUser().getId().equals(user.getId())) {
-            throw new RuntimeException("Ce héros ne vous appartient pas.");
-        }
-
-        return skillRepository.findByHero(playerHero.getHero());
+                .orElseThrow(() -> new RuntimeException("Héros joueur introuvable"));
+        return skillRepository.findByHero(playerHero.getHero())
+                .stream()
+                .map(this::toDTO)
+                .toList();
     }
 
     /**
@@ -137,29 +60,6 @@ public class SkillService {
     }
 
     /**
-     * Met à jour une compétence existante.
-     */
-    public Skill updateSkill(Long skillId, Skill updated) {
-        Skill existing = getSkillById(skillId);
-
-        existing.setName(updated.getName());
-        existing.setDescription(updated.getDescription());
-        existing.setCategory(updated.getCategory());
-        existing.setAction(updated.getAction());
-        existing.setTargetGroup(updated.getTargetGroup());
-        existing.setTargetCount(updated.getTargetCount());
-        existing.setScalingStat(updated.getScalingStat());
-        existing.setScalingFactor(updated.getScalingFactor());
-        existing.setCooldown(updated.getCooldown());
-        existing.setPassiveBonus(updated.getPassiveBonus());
-        existing.setBonusValue(updated.getBonusValue());
-        existing.setApplyToAllies(updated.getApplyToAllies());
-        existing.setTriggerCondition(updated.getTriggerCondition());
-
-        return skillRepository.save(existing);
-    }
-
-    /**
      * Convertit une entité Skill en DTO (Data Transfer Object).
      */
     public SkillDTO toDTO(Skill skill) {
@@ -168,6 +68,9 @@ public class SkillService {
         dto.setName(skill.getName());
         dto.setDescription(skill.getDescription());
         dto.setCategory(skill.getCategory() != null ? skill.getCategory().name() : null);
+        dto.setPosition(skill.getPosition());
+        dto.setIcon(skill.getIcon());
+        dto.setAnimation(skill.getAnimation());
         dto.setAction(skill.getAction() != null ? skill.getAction().name() : null);
         dto.setTargetGroup(skill.getTargetGroup() != null ? skill.getTargetGroup().name() : null);
         dto.setTargetCount(skill.getTargetCount());
